--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ version = "0.1.0"
 Django = "^3.0"
 python = "^3.8"
 django-crispy-forms = "^1.13.0"
+whitenoise = "^6.4.0"
 [tool.poetry.dev-dependencies]
