--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ Django = "^3.0"
 python = "^3.8"
 django-crispy-forms = "^1.13.0"
 whitenoise = "^6.4.0"
+psycopg2-binary = "^2.9.6"
 [tool.poetry.dev-dependencies]
