--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ python = "^3.8"
 django-crispy-forms = "^1.13.0"
 whitenoise = "^6.4.0"
 psycopg2-binary = "^2.9.6"
+gunicorn = "^20.1.0"
 [tool.poetry.dev-dependencies]
