--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.2 ; python_version >= "3.8" and python_version < "4.0"
 django-crispy-forms==1.14.0 ; python_version >= "3.8" and python_version < "4.0"
 django==3.2.13 ; python_version >= "3.8" and python_version < "4.0"
+gunicorn==20.1.0 ; python_version >= "3.8" and python_version < "4.0"
 psycopg2-binary==2.9.6 ; python_version >= "3.8" and python_version < "4.0"
 pytz==2022.1 ; python_version >= "3.8" and python_version < "4.0"
+setuptools==67.8.0 ; python_version >= "3.8" and python_version < "4.0"
 sqlparse==0.4.2 ; python_version >= "3.8" and python_version < "4.0"
 whitenoise==6.4.0 ; python_version >= "3.8" and python_version < "4.0"
